--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-.ui__notification_popup {
+.ui__notification_popup__wrapper .ui__notification_popup {
     position: fixed;
     top: 100px;
-    right: 0;
+    right: 10px;
     height: 40px;
     line-height: 20px;
     padding: 10px 20px;
@@ -13,7 +13,24 @@
     box-sizing: border-box;
     border: 1px solid #ebeef5;
 }
-.ui__notification_popup.ui__notification_popup__default {
+.ui__notification_popup__wrapper .ui__notification_popup.ui__notification_popup__default {
     background-color: #f4f4f5;
     color: #909399;
+}
+.ui__notification_popup__wrapper .ui__notification_popup.ui__notification_close_button {
+    padding: 0;
+    padding-right: 5px;
+    height: auto;
+}
+.ui__notification_popup__wrapper .ui__notification_popup.ui__notification_close_button:before {
+    content: 'x';
+    top: 0;
+    right: 0;
+    color: #666;
+    font-weight: 300;
+    font-family: Arial, sans-serif;
+}
+.ui__notification_popup__wrapper .ui__notification_popup.ui__notification_close_button:hover:before {
+    cursor: pointer;
+    color: #000;
 }
